@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.187 2008/01/27 18:47:45 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.188 2008/01/27 23:16:34 mikulik Exp $"); }
 #endif
 
 /* GNUPLOT - graph3d.c */
@@ -2860,7 +2860,10 @@ map3d_getposition(
 	plot_coords = TRUE;
 	break;
     case graph:
-	*ypos = Y_AXIS.min + *ypos * (Y_AXIS.max - Y_AXIS.min);
+	if (splot_map)
+	    *ypos = Y_AXIS.max - *ypos * (Y_AXIS.max - Y_AXIS.min);
+	else
+	    *ypos = Y_AXIS.min + *ypos * (Y_AXIS.max - Y_AXIS.min);
 	plot_coords = TRUE;
 	break;
     case screen:
@@ -2954,9 +2957,9 @@ map3d_position_r(
 	else
 	    xpos = 0;
 	if (pos->scaley == graph)
-	    ypos = Y_AXIS.min;
+	    ypos = (splot_map) ? Y_AXIS.max : Y_AXIS.min;
 	else
-	    ypos = 0;
+	    ypos = (splot_map) ? Y_AXIS.max : 0;
 	if (pos->scalez == graph)
 	    zpos = Z_AXIS.min;
 	else
@@ -2966,8 +2969,8 @@ map3d_position_r(
 	*y -= yoriginlocal;
     } else {
     /* endpoint `screen' or 'character' coordinates */
-	    *x = xpos;
-	    *y = ypos;
+	*x = xpos;
+	*y = ypos;
     }
     return;
 }
